# plzoo-hs

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  plzoo-hs.cabal
app/: Calc.hs  CalcVar.hs  Comm.hs  Tartlet.hs  UTLC.hs
app/calc/: Eval.hs  Lexer.x  Main.hs  Parser.y
app/calc_var/: Eval.hs  Lexer.x  Main.hs  Parser.y  Syntax.hs
app/comm/: Compile.hs  Lexer.x  Machine.hs  Main.hs  Parser.y  Syntax.hs
app/lambda/: Command.hs  Context.hs  Main.hs  Normalize.hs  Parser.hs  Printer.hs  Syntax.hs  example.cylon
app/stlc/: Printer.hs  Syntax.hs  Typecheck.hs
app/tartlet/: Main.hs  Semantics.hs  Syntax.hs
app/utlc/: Command.hs  Context.hs  Lexer.x  Main.hs  Normalize.hs  Parser.hs  Printer.hs  Syntax.hs  example.cylon
src/: Zoo.hs
src/Control/Carrier/Runtime/: IO.hs  Pure.hs
src/Control/Effect/: Runtime.hs
src/Data/: Fin.hs  Nat.hs
src/Language/Calc/: Eval.hs  Lexer.x  Parser.y  Syntax.hs
src/Language/CalcVar/: Eval.hs  Lexer.x  Parser.y  Syntax.hs
src/Language/Comm/: Compile.hs  Lexer.x  Machine.hs  Parser.y  Syntax.hs
src/Language/Tartlet/: Env.hs  Name.hs  Semantics.hs  Syntax.hs
src/Language/UTLC/: Command.hs  Context.hs  Lexer.x  Normalize.hs  Parser.hs  Printer.hs  Syntax.hs
src/Zoo/: Core.hs  Debug.hs  Error.hs  Location.hs  Main.hs  Options.hs  Parser.hs  Printer.hs
src/calc/: Eval.hs  Lexer.x  Main.hs  Parser.y  Syntax.hs
src/calc_var/: Eval.hs  Main.hs  Parser.y  Syntax.hs
src/comm/: Compile.hs  Lexer.x  Machine.hs  Main.hs  Parser.y  Syntax.hs  example.comm
src/lambda/: Command.hs  Lexer.x  Main.hs  Normalize.hs  Parser.hs  Parser.y  Syntax.hs  example.cylon  example_cylon.lambda
test/: Spec.hs
