cabal-version:       3.0

name:                plzoo-hs
version:             0.3.0.0
synopsis:            The Programming Languages Zoo
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE.md
author:              cmcmA20
maintainer:          cmcmA20@pm.me
-- copyright:
category:            Compilers/Interpreters, Education
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:      Zoo
  other-modules:
  build-depends:        base >= 4.14 && <4.15
                      , fused-effects >= 1.1.0.0
                      , fused-effects-exceptions
                      , generic-lens
                      , lens
                      , optparse-applicative
                      , text
                      , unix
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   AllowAmbiguousTypes
                      , BlockArguments
                      , ConstraintKinds
                      , DeriveFunctor
                      , DeriveGeneric
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , KindSignatures
                      , MultiParamTypeClasses
                      , OverloadedLabels
                      , OverloadedStrings
                      , RankNTypes
                      , ScopedTypeVariables
                      , TypeApplications
                      , TypeOperators
                      , UndecidableInstances
                      , ViewPatterns
  ghc-options:         -Wall

executable calc
  main-is:             Main.hs
  other-modules:       Eval
                     , Lexer
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , fused-effects
                     , lens
                     , plzoo-hs
                     , text
  build-tool-depends:  alex:alex
                     , happy:happy
  hs-source-dirs:      src/calc
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeApplications
  ghc-options:         -Wall

executable calc_var
  main-is:             Main.hs
  other-modules:       Eval
                     , Lexer
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , fused-effects
                     , lens
                     , plzoo-hs
                     , text
                     , unordered-containers
  build-tool-depends:  alex:alex
                     , happy:happy
  hs-source-dirs:      src/calc_var
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeApplications
  ghc-options:         -Wall

executable comm
  main-is:             Main.hs
  other-modules:       Compile
                     , Lexer
                     , Machine
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , containers
                     , formatting
                     , fused-effects
                     , lens
                     , optparse-applicative
                     , plzoo-hs
                     , text
  build-tool-depends:  alex:alex
                     , happy:happy
  hs-source-dirs:      src/comm
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , GeneralizedNewtypeDeriving
                     , OverloadedLabels
                     , OverloadedStrings
                     , TupleSections
                     , TypeApplications
  ghc-options:         -Wall

executable lambda
  main-is:             Main.hs
  other-modules:       Command
                     , Context
                     , Lexer
                     , Normalize
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , fused-effects
                     , lens
                     , parsec
                     , plzoo-hs
                     , singletons
                     , text
                     , unordered-containers
  build-tool-depends:  alex:alex
  hs-source-dirs:      src/lambda
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveGeneric
                     , GADTs
                     , OverloadedLabels
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , StandaloneKindSignatures
                     , TemplateHaskell
                     , TypeApplications
                     , TypeFamilies
  ghc-options:         -Wall
