cabal-version:       3.0

name:                plzoo-hs
version:             0.4.0.0
synopsis:            The Programming Languages Zoo
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE.md
author:              cmcmA20
maintainer:          cmcmA20@pm.me
-- copyright:
category:            Compilers/Interpreters, Education
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:      Control.Effect.Runtime
                      , Control.Carrier.Runtime.IO
                      , Control.Carrier.Runtime.Pure
                      , Data.Fin
                      , Data.Nat
                      , Zoo
  other-modules:        Zoo.Core
                      , Zoo.Debug
                      , Zoo.Error
                      , Zoo.Location
                      , Zoo.Main
                      , Zoo.Options
                      , Zoo.Parser
  build-depends:        base >= 4.14 && <4.15
                      , fused-effects >= 1.1.0.0
                      , fused-effects-exceptions
                      , generic-lens
                      , lens
                      , optparse-applicative
                      , pretty-simple
                      , singletons
                      , text
                      , unix
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   AllowAmbiguousTypes
                      , BangPatterns
                      , BlockArguments
                      , ConstraintKinds
                      , DataKinds
                      , DeriveFunctor
                      , DeriveGeneric
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , InstanceSigs
                      , KindSignatures
                      , MultiParamTypeClasses
                      , OverloadedLabels
                      , OverloadedStrings
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneKindSignatures
                      , TemplateHaskell
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , UndecidableInstances
                      , ViewPatterns
  ghc-options:         -Wall

executable calc
  main-is:             Main.hs
  other-modules:       Eval
                     , Lexer
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , fused-effects
                     , lens
                     , plzoo-hs
                     , text
  build-tool-depends:  alex:alex
                     , happy:happy
  hs-source-dirs:      app/calc
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeApplications
  ghc-options:         -Wall

executable calc_var
  main-is:             Main.hs
  other-modules:       Eval
                     , Lexer
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , fused-effects
                     , lens
                     , plzoo-hs
                     , text
                     , unordered-containers
  build-tool-depends:  alex:alex
                     , happy:happy
  hs-source-dirs:      app/calc_var
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeApplications
  ghc-options:         -Wall

executable comm
  main-is:             Main.hs
  other-modules:       Compile
                     , Lexer
                     , Machine
                     , Parser
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , containers
                     , formatting
                     , fused-effects
                     , lens
                     , optparse-applicative
                     , plzoo-hs
                     , text
  build-tool-depends:  alex:alex
                     , happy:happy
  hs-source-dirs:      app/comm
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , GeneralizedNewtypeDeriving
                     , OverloadedLabels
                     , OverloadedStrings
                     , TupleSections
                     , TypeApplications
  ghc-options:         -Wall

executable utlc
  main-is:             Main.hs
  other-modules:       Command
                     , Context
                     , Lexer
                     , Normalize
                     , Parser
                     , Printer
                     , Syntax
  build-depends:       array
                     , base >=4.14 && <4.15
                     , fused-effects
                     , lens
                     , plzoo-hs
                     , pretty-simple
                     , singletons
                     , text
                     , unordered-containers
  build-tool-depends:  alex:alex
  hs-source-dirs:      app/utlc
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveGeneric
                     , DerivingVia
                     , GADTs
                     , KindSignatures
                     , OverloadedLabels
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneKindSignatures
                     , TypeApplications
  ghc-options:         -Wall
