cabal-version:       3.0

name:                plzoo-hs
version:             0.4.0.0
synopsis:            The Programming Languages Zoo
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE.md
author:              cmcmA20
maintainer:          cmcmA20@pm.me
-- copyright:
category:            Compilers/Interpreters, Education
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:      Control.Effect.Runtime
                      , Control.Carrier.Runtime.IO
                      , Control.Carrier.Runtime.Pure
                      , Data.Fin
                      , Data.Nat
                      , Language.Calc.Eval
                      , Language.Calc.Lexer
                      , Language.Calc.Parser
                      , Language.Calc.Syntax
                      , Language.CalcVar.Eval
                      , Language.CalcVar.Lexer
                      , Language.CalcVar.Parser
                      , Language.CalcVar.Syntax
                      , Language.Comm.Compile
                      , Language.Comm.Lexer
                      , Language.Comm.Machine
                      , Language.Comm.Parser
                      , Language.Comm.Syntax
                      , Language.UTLC.Command
                      , Language.UTLC.Context
                      , Language.UTLC.Lexer
                      , Language.UTLC.Normalize
                      , Language.UTLC.Parser
                      , Language.UTLC.Printer
                      , Language.UTLC.Syntax
                      , Language.Tartlet.Env
                      , Language.Tartlet.Name
                      , Language.Tartlet.Semantics
                      , Language.Tartlet.Syntax
                      , Zoo
  other-modules:        Zoo.Core
                      , Zoo.Debug
                      , Zoo.Error
                      , Zoo.Location
                      , Zoo.Main
                      , Zoo.Options
                      , Zoo.Parser
  build-depends:        array
                      , base >= 4.14 && <4.15
                      , containers
                      , formatting
                      , fused-effects >= 1.1.0.0
                      , fused-effects-exceptions
                      , generic-lens
                      , hashable
                      , lens
                      , optparse-applicative
                      , pretty-simple
                      , singletons == 2.7
                      , text
                      , unix
                      , unordered-containers
  build-tool-depends:   alex:alex
                      , happy:happy
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   AllowAmbiguousTypes
                      , BangPatterns
                      , BlockArguments
                      , ConstraintKinds
                      , DataKinds
                      , DeriveFunctor
                      , DeriveGeneric
                      , DerivingVia
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , ImportQualifiedPost
                      , InstanceSigs
                      , KindSignatures
                      , MultiParamTypeClasses
                      , OverloadedLabels
                      , OverloadedStrings
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneKindSignatures
                      , TemplateHaskell
                      , TypeApplications
                      , TypeFamilies
                      , TypeOperators
                      , UndecidableInstances
                      , ViewPatterns
  ghc-options:          -Wall

test-suite plzoo-test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  build-depends:        base >=4.14 && <4.15
                      , fused-effects
                      , plzoo-hs
  default-extensions:   OverloadedStrings
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

common common-executable
  hs-source-dirs:       app
  ghc-options:          -Wall
  default-extensions:   ImportQualifiedPost
                      , OverloadedStrings
                      , TypeApplications
  default-language:     Haskell2010
  build-depends:        base >=4.14 && <4.15
                      , fused-effects
                      , plzoo-hs
                      , text

executable calc
  import:               common-executable
  main-is:              Calc.hs

executable calc_var
  import:               common-executable
  main-is:              CalcVar.hs
  build-depends:        unordered-containers

executable comm
  import:               common-executable
  main-is:              Comm.hs
  build-depends:        lens
                      , optparse-applicative
  default-extensions:   BlockArguments
                      , DeriveGeneric
                      , OverloadedLabels

executable utlc
  import:               common-executable
  main-is:              UTLC.hs

executable tartlet
  import:               common-executable
  main-is:              Tartlet.hs
